coupon fixed isolation: