@@ -13,7 +13,6 @@ import org.springframework.web.bind.annotation.*;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/coupons")
@@ -27,15 +26,8 @@ public class CouponController {
         this.jwtUtil = jwtUtil;
     }
 
-    private String strip(String auth) {
-        return auth == null ? "" : auth.replace("Bearer ", "").trim();
-    }
-
-    /**
-     * Supports both OWNER and ROLE_OWNER (Spring Security often uses ROLE_*).
-     */
-    private boolean hasRole(String token, String... roles) {
-        String role = jwtUtil.extractRole(token);
+    private boolean hasRole(String tokenOrBearer, String... roles) {
+        String role = jwtUtil.extractRole(tokenOrBearer);
         if (role == null) return false;
 
         String normalized = role.toUpperCase();
@@ -48,9 +40,14 @@ public class CouponController {
         return false;
     }
 
-    /* ============================
-       CREATE
-       ============================ */
+    private Long tenantFromToken(String authHeader) {
+        // ✅ your JwtUtil already normalizes/validates in requireOwnerProjectId
+        return jwtUtil.requireOwnerProjectId(authHeader);
+    }
+
+    /* ==========================
+       CREATE (OWNER)
+       ========================== */
 
     @PostMapping
     @Operation(summary = "Create coupon (OWNER only)")
@@ -58,138 +55,150 @@ public class CouponController {
             @RequestHeader("Authorization") String auth,
             @RequestBody CouponRequest req
     ) {
-        String token = strip(auth);
-        if (!hasRole(token, "OWNER")) {
+        if (!hasRole(auth, "OWNER")) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "Owner role required"));
+                    .body(Map.of("error", "Owner role required"));
         }
 
         try {
+            Long ownerProjectId = tenantFromToken(auth);
+
+            // ✅ do NOT trust client tenant
+            req.setOwnerProjectId(ownerProjectId);
+
             CouponResponse created = couponService.create(req);
             return ResponseEntity.status(HttpStatus.CREATED).body(created);
         } catch (IllegalArgumentException e) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("error", e.getMessage()));
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("error", e.getMessage()));
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Map.of("error", e.getMessage()));
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("error", "Server error"));
         }
     }
 
-    /* ============================
-       UPDATE
-       ============================ */
+    /* ==========================
+       UPDATE (OWNER)
+       ========================== */
 
     @PutMapping("/{id}")
     @Operation(summary = "Update coupon (OWNER only)")
     public ResponseEntity<?> update(
             @RequestHeader("Authorization") String auth,
             @PathVariable Long id,
-            @RequestParam Long ownerProjectId,
             @RequestBody CouponRequest req
     ) {
-        String token = strip(auth);
-        if (!hasRole(token, "OWNER")) {
+        if (!hasRole(auth, "OWNER")) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "Owner role required"));
+                    .body(Map.of("error", "Owner role required"));
         }
 
         try {
+            Long ownerProjectId = tenantFromToken(auth);
+
+            // ✅ ignore req.ownerProjectId completely
             Coupon updated = couponService.update(ownerProjectId, id, req);
             return ResponseEntity.ok(couponService.toResponse(updated));
         } catch (IllegalArgumentException e) {
-            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(Map.of("error", e.getMessage()));
+            // use 404-ish message to avoid leaking tenant/coupon existence details
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", e.getMessage()));
         } catch (Exception e) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Map.of("error", e.getMessage()));
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("error", "Server error"));
         }
     }
 
-    /* ============================
-       DELETE
-       ============================ */
+    /* ==========================
+       DELETE (OWNER)
+       ========================== */
 
     @DeleteMapping("/{id}")
     @Operation(summary = "Delete coupon (OWNER only)")
     public ResponseEntity<?> delete(
             @RequestHeader("Authorization") String auth,
-            @PathVariable Long id,
-            @RequestParam Long ownerProjectId
+            @PathVariable Long id
     ) {
-        String token = strip(auth);
-        if (!hasRole(token, "OWNER")) {
+        if (!hasRole(auth, "OWNER")) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "Owner role required"));
+                    .body(Map.of("error", "Owner role required"));
         }
 
         try {
+            Long ownerProjectId = tenantFromToken(auth);
             couponService.delete(ownerProjectId, id);
             return ResponseEntity.noContent().build();
         } catch (IllegalArgumentException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("error", e.getMessage()));
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", e.getMessage()));
+        } catch (Exception e) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("error", "Server error"));
         }
     }
 
-    /* ============================
-       GET / LIST
-       ============================ */
+    /* ==========================
+       GET / LIST (OWNER)
+       ========================== */
 
     @GetMapping("/{id}")
     @Operation(summary = "Get coupon by id (OWNER only)")
     public ResponseEntity<?> get(
             @RequestHeader("Authorization") String auth,
-            @PathVariable Long id,
-            @RequestParam Long ownerProjectId
+            @PathVariable Long id
     ) {
-        String token = strip(auth);
-        if (!hasRole(token, "OWNER")) {
+        if (!hasRole(auth, "OWNER")) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "Owner role required"));
+                    .body(Map.of("error", "Owner role required"));
         }
 
         try {
+            Long ownerProjectId = tenantFromToken(auth);
             Coupon c = couponService.get(ownerProjectId, id);
             return ResponseEntity.ok(couponService.toResponse(c));
         } catch (IllegalArgumentException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(Map.of("error", e.getMessage()));
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", e.getMessage()));
         }
     }
 
     @GetMapping
-    @Operation(summary = "List coupons for one app (OWNER only)")
-    public ResponseEntity<?> list(
-            @RequestHeader("Authorization") String auth,
-            @RequestParam Long ownerProjectId
-    ) {
-        String token = strip(auth);
-        if (!hasRole(token, "OWNER")) {
+    @Operation(summary = "List coupons for my app (OWNER only)")
+    public ResponseEntity<?> list(@RequestHeader("Authorization") String auth) {
+        if (!hasRole(auth, "OWNER")) {
             return ResponseEntity.status(HttpStatus.FORBIDDEN)
-                    .body(Map.of("message", "Owner role required"));
+                    .body(Map.of("error", "Owner role required"));
         }
+
+        Long ownerProjectId = tenantFromToken(auth);
 
         List<CouponResponse> list = couponService.listByOwnerProject(ownerProjectId)
                 .stream()
                 .map(couponService::toResponse)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(list);
     }
 
-    /* ============================
-       VALIDATE
-       ============================ */
+    /* ==========================
+       VALIDATE (Checkout)
+       ========================== */
 
     @GetMapping("/validate")
-    @Operation(summary = "Validate coupon code for given ownerProject and amount")
+    @Operation(summary = "Validate coupon code (token tenant preferred)")
     public ResponseEntity<?> validate(
-            @RequestParam Long ownerProjectId,
+            @RequestHeader(value = "Authorization", required = false) String auth,
+            @RequestParam(required = false) Long ownerProjectId,
             @RequestParam String code,
             @RequestParam BigDecimal itemsSubtotal
     ) {
         try {
+            // ✅ If authenticated, tenant always from token
+            if (auth != null && !auth.isBlank()) {
+                ownerProjectId = jwtUtil.requireOwnerProjectId(auth);
+            }
+
+            // ✅ Guest fallback (only if you really allow guests)
+            if (ownerProjectId == null) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "valid", false,
+                        "error", "ownerProjectId is required (or provide Authorization)"
+                ));
+            }
+
             Coupon coupon = couponService.validateForOrder(ownerProjectId, code, itemsSubtotal);
             if (coupon == null) {
                 return ResponseEntity.ok(Map.of(
@@ -197,6 +206,7 @@ public class CouponController {
                         "error", "Coupon not valid for this amount or date"
                 ));
             }
+
             var discount = couponService.computeDiscount(coupon, itemsSubtotal);
             return ResponseEntity.ok(Map.of(
                     "valid", true,
